--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,3 +7,7 @@ authors = ["ikeikeikeike <jp.ne.co.jp@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 PyYAML = "^5.4"
+
+[build-system]
+requires = ["poetry>=1.0"]
+build-backend = "poetry.masonry.api"
