--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["ikeikeikeike <jp.ne.co.jp@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9.7"
 PyYAML = "^5.4"
+botocore = "^1.21"
 
 [build-system]
 requires = ["poetry>=1.1"]
