--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "mine"
 authors = ["ikeikeikeike <jp.ne.co.jp@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9.7"
+python = "==3.9.6"
 PyYAML = "^5.4"
 botocore = "^1.21"
 
